--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -1,15 +1,15 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title> {{displayD.displayName}}</ion-title>
+    <ion-title> {{currentUser.displayName}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <div>
-    UserID: {{ displayD.uid }}
+    UserID: {{ currentUser.uid }}
     <!-- {{data.property}} -->
   </div>
-  <img src="{{displayD.photoURL}}">
+  <img src="{{currentUser.photoURL}}">
 
   <ion-button (click)="authService.SignOut()">
     Logout
@@ -17,5 +17,21 @@
   <ion-button (click)="authService.googleSignOut()">
     Google Logout
   </ion-button>
+
+  <div class="profile">
+    <!-- <img [src]="user.img" width="50px"> -->
+    {{currentUser.displayName}} has <strong>{{followerCount}}</strong> followers
+    <div *ngIf="isFollowing; then unfollowButton else followButton">
+      button renders here
+    </div>
+  </div>
+
+  <ng-template #followButton>
+    <button class="button is-info" (click)="toggleFollow()">Follow</button>
+  </ng-template>
+
+  <ng-template #unfollowButton>
+    <button class="button is-warning" (click)="toggleFollow()">Unfollow</button>
+  </ng-template>
 
 </ion-content>
