Follow/Following updated with use of component

--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -3,35 +3,10 @@
     <ion-title> {{currentUser.displayName}}</ion-title>
   </ion-toolbar>
 </ion-header>
-
-<ion-content>
-  <div>
-    UserID: {{ currentUser.uid }}
-    <!-- {{data.property}} -->
+<ion-content>You are logged in as <strong>{{currentUser?.displayName }}</strong>
+  <hr>
+  <!-- <div *ngFor="let user of userArray | async"> -->
+  <div *ngFor="let user of userArray">
+    <app-user-profile [user]="user" [currentUser]="currentUser"></app-user-profile>
   </div>
-  <img src="{{currentUser.photoURL}}">
-
-  <ion-button (click)="authService.SignOut()">
-    Logout
-  </ion-button>
-  <ion-button (click)="authService.googleSignOut()">
-    Google Logout
-  </ion-button>
-
-  <div class="profile">
-    <!-- <img [src]="user.img" width="50px"> -->
-    {{currentUser.displayName}} has <strong>{{followerCount}}</strong> followers
-    <div *ngIf="isFollowing; then unfollowButton else followButton">
-      button renders here
-    </div>
-  </div>
-
-  <ng-template #followButton>
-    <button class="button is-info" (click)="toggleFollow()">Follow</button>
-  </ng-template>
-
-  <ng-template #unfollowButton>
-    <button class="button is-warning" (click)="toggleFollow()">Unfollow</button>
-  </ng-template>
-
 </ion-content>
