--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -1,9 +1,20 @@
 <div class="profile">
-  <img [src]="user.photoURL" width="50px">
-  @{{user.uid}} has <strong>{{followerCount}}</strong> followers
-
-  <div *ngIf="isFollowing; then unfollowButton else followButton">
-  </div>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="2">
+        <ion-avatar>
+          <ion-img [src]="user.photoURL"></ion-img>
+        </ion-avatar>
+      </ion-col>
+      <ion-col size="7">
+        @{{user.uid}} has <strong>{{followerCount}}</strong> followers
+      </ion-col>
+      <ion-col size="3">
+        <div *ngIf="isFollowing; then unfollowButton else followButton">
+        </div>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </div>
 
 <ng-template #followButton>
