--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -4,15 +4,25 @@
       <ion-img [src]="currentUser.photoURL"></ion-img>
     </ion-avatar>
     <ion-title> {{currentUser.displayName}}</ion-title>
+    <div routerLink="/connections">
+      followers | 163
+    </div>
+    <ion-row>
+      <ion-col size="3" inset="3">
+        Following | <strong>{{followingCount}}</strong>
+      </ion-col>
+      <ion-col size="3">
+        Followers | <strong>{{followerCount}}</strong>
+      </ion-col>
+    </ion-row>
+    <div>
+      Here {{currentUser.uid}}
+    </div>
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <app-user-profile> </app-user-profile>
-
-  <!-- <div *ngFor="let user of userArray">
-    <app-user-profile-card [user]="user" [currentUser]="currentUser"></app-user-profile-card>
-  </div> -->
+  <app-user-profile></app-user-profile>
+  <ion-button (click)="authService.SignOut()" class="ion-margin-bottom" fill="outline" color="danger" expand="block">
+    Log out
+  </ion-button>
 </ion-content>
-<ion-button (click)="authService.SignOut()">
-  Log out
-</ion-button>
