--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -4,20 +4,16 @@
       <ion-img [src]="currentUser.photoURL"></ion-img>
     </ion-avatar>
     <ion-title> {{currentUser.displayName}}</ion-title>
-    <div routerLink="/connections">
-      followers | 163
-    </div>
-    <ion-row>
-      <ion-col size="3" inset="3">
-        Following | <strong>{{followingCount}}</strong>
-      </ion-col>
-      <ion-col size="3">
-        Followers | <strong>{{followerCount}}</strong>
-      </ion-col>
-    </ion-row>
-    <div>
-      Here {{currentUser.uid}}
-    </div>
+    <ion-grid>
+      <ion-row routerLink="/connections">
+        <ion-col size="3" inset="3">
+          Following | <strong>{{followingCount}}</strong>
+        </ion-col>
+        <ion-col size="3">
+          Followers | <strong>{{followerCount}}</strong>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </ion-toolbar>
 </ion-header>
 <ion-content>
