--- a/src/app/pages/connections/connections.page.html
+++ b/src/app/pages/connections/connections.page.html
@@ -9,6 +9,6 @@
 
 <ion-content>
   <div *ngFor="let user of userArray">
-    <app-user-profile-card [user]="user" [currentUser]="currentUser"></app-user-profile-card>
+    <app-user-profile-card [user]="user" [inputtedUser]="inputtedUser"></app-user-profile-card>
   </div>
 </ion-content>
