--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -5,19 +5,20 @@
     </ion-avatar>
     <ion-title> {{currentUser.displayName}}</ion-title>
     <ion-grid>
-      <ion-row routerLink="/connections">
-        <ion-col size="3" inset="3">
+      <ion-row>
+        <ion-col size="3" inset="3" (click)="viewFollowing()">
           Following | <strong>{{followingCount}}</strong>
         </ion-col>
         <ion-col size="3">
           Followers | <strong>{{followerCount}}</strong>
         </ion-col>
       </ion-row>
+      <ion-row *ngFor="let item of followersArr"> {{item}}</ion-row>
     </ion-grid>
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <app-user-profile></app-user-profile>
+  <app-user-profile [inputtedUser]="currentUser"></app-user-profile>
   <ion-button (click)="authService.SignOut()" class="ion-margin-bottom" fill="outline" color="danger" expand="block">
     Log out
   </ion-button>
