Fixed bug where currUser was not follwng right usr

--- a/src/app/pages/connections/connections.page.html
+++ b/src/app/pages/connections/connections.page.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content>
-  <div *ngFor="let user of userArray">
-    <app-user-profile-card [user]="user" [inputtedUser]="inputtedUser"></app-user-profile-card>
+  <div *ngFor="let user of inUserFollowersArrObj">
+    <app-user-profile-card [user]="user.data"></app-user-profile-card>
   </div>
 </ion-content>
