--- a/src/app/components/user-profile-card/user-profile-card.component.html
+++ b/src/app/components/user-profile-card/user-profile-card.component.html
@@ -6,7 +6,7 @@
           <ion-img [src]="user.photoURL"></ion-img>
         </ion-avatar>
       </ion-col>
-      <ion-col size="5" (click)="viewUser(user)">
+      <ion-col size="5">
         {{user.displayName}}
       </ion-col>
       <ion-col size="4">
