--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -1,19 +1,22 @@
 <ion-header>
   <ion-toolbar>
-    <ion-avatar>
-      <ion-img [src]="currentUser.photoURL"></ion-img>
-    </ion-avatar>
-    <ion-title> {{currentUser.displayName}}</ion-title>
+
     <ion-grid>
       <ion-row>
-        <ion-col size="3" inset="3" (click)="viewFollowing()">
-          Following | <strong>{{followingCount}}</strong>
+        <ion-avatar>
+          <ion-img [src]="currentUser.photoURL"></ion-img>
+        </ion-avatar>
+        <ion-title> {{currentUser.uid}}</ion-title>
+      </ion-row>
+      <ion-row class="ion-margin">
+        <ion-col size="6" (click)="viewFollowing()">
+          Following <strong>{{followingCount}}</strong>
         </ion-col>
-        <ion-col size="3">
-          Followers | <strong>{{followerCount}}</strong>
+        <ion-col size="6">
+          Followers<strong>{{followerCount}}</strong>
         </ion-col>
       </ion-row>
-      <ion-row *ngFor="let item of followersArr"> {{item}}</ion-row>
+      <!-- <ion-row *ngFor="let item of followersArr"> {{item}}</ion-row> -->
     </ion-grid>
   </ion-toolbar>
 </ion-header>
