--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -9,11 +9,11 @@
         <ion-title> {{currentUser.uid}}</ion-title>
       </ion-row>
       <ion-row class="ion-margin">
-        <ion-col size="6" (click)="viewFollowing()">
+        <ion-col size="6" (click)="viewFollowing(true)">
           Following <strong>{{followingCount}}</strong>
         </ion-col>
-        <ion-col size="6">
-          Followers<strong>{{followerCount}}</strong>
+        <ion-col size="6" (click)="viewFollowing(false)">
+          Followers <strong>{{followerCount}}</strong>
         </ion-col>
       </ion-row>
       <!-- <ion-row *ngFor="let item of followersArr"> {{item}}</ion-row> -->
