--- a/src/app/components/user-profile-card/user-profile-card.component.html
+++ b/src/app/components/user-profile-card/user-profile-card.component.html
@@ -6,8 +6,8 @@
           <ion-img [src]="user.photoURL"></ion-img>
         </ion-avatar>
       </ion-col>
-      <ion-col size="5">
-        {{user.displayName}}
+      <ion-col size="5" (click)="viewUser(user)">
+        {{user.uid}}
       </ion-col>
       <ion-col size="4">
         <div *ngIf="isFollowing; then unfollowButton else followButton">
